--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head> 
 <title>particles</title> 
 <link rel="icon" type="image/png" href="favicon.png"> 
-<meta name="apple-mobile-web-app-capable" content="yes"> 
+<meta name="apple-mobile-web-app-capable" content="yes">
+<html manifest="particles.manifest"> 
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> 
 <script type="text/javascript" src="raphael.js"></script> 
 
