--- a/index.html
+++ b/index.html
@@ -194,6 +194,13 @@ function Particle(x_,y_,vx_,vy_,r_,typ,insanity){
 					// T.vx+=(victim.x-T.x)/Math.abs(victim.x-T.x)*.1;
 					// T.vy+=(victim.y-T.y)/Math.abs(victim.y-T.y)*.1;
 				}
+				else if(T.shouldFear(victim)){
+					var dx=victim.x-T.x;
+					var dy = victim.y-T.y;
+					var dist = Math.dist(dx,dy);
+					T.vx-=dx/(dist*dist)*10;
+					T.vy-=dy/(dist*dist)*10;
+				}
 			}
 			
 			// if(closest){
@@ -272,6 +279,11 @@ function Particle(x_,y_,vx_,vy_,r_,typ,insanity){
 		}
  
 	}
+	
+	this.shouldFear=function shouldFear(p2){
+		return this.type == "particle" && p2.type == "bio"
+	}
+
 	this.canEat = function canEat(p2){
 		return this.type == "bio" && ((p2.type!="bio" && this.r>p2.r)||(this.r>p2.r*1.5)) && !this.willRemove;
 	}
