--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ var mouseStart={x:0,y:0};
 var dims={w:0,h:0};
  
 var run=true;
- 
+var fear = false;
+
 var avgShake=0;
  
 var gravMode=true;
@@ -281,7 +282,7 @@ function Particle(x_,y_,vx_,vy_,r_,typ,insanity){
 	}
 	
 	this.shouldFear=function shouldFear(p2){
-		return this.type == "particle" && p2.type == "bio"
+		return this.type == "particle" && p2.type == "bio" && fear;
 	}
 
 	this.canEat = function canEat(p2){
@@ -708,6 +709,9 @@ function init(){
 				break;
 			case 70: //f
 				freeze();
+				break;
+			case 82: //r
+				fear = !fear;
 				break;
 			
 		}
