--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ var container;
 var msgDiv;
  
 var particles=[];
- 
+var bios = [];
+
 var gravityX=0;
 var gravityY=.3;
 var fricAir=.999;
@@ -351,6 +352,7 @@ function Particle(x_,y_,vx_,vy_,r_,typ,insanity){
 	this.doWalls();
 	this.update();
 	particles.push(this);
+	if(this.type == "bio"){bios.push(this);}
 }
 
 
@@ -415,8 +417,10 @@ function step(){
 				particles.splice(i,1);
 			}
 		}
-
-		
+		for(var i=bios.length-1;i>=0;i--){
+			if(bios[i].willRemove){
+				bios.splice(i,1);
+			}
 	}
 	
 }
