--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@ body{
 	opacity:0;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
+	-khtml-user-select:none;
 	border-radius: 10px;
 	text-align:center;
 	position:absolute;
-	top:10px;
-	left:10px;
+	//unselectable:on;
+	cursor:default;
+	top:35%;
+	left:35%;
 }
 
 #container{
@@ -830,7 +833,7 @@ Math.dist=function(a,b){
 <div id='container'> 
 	<div id='message'></div> 
 </div> 
-<div id='helpDisplay'> K = Spawn Many Particles<br \> Space Bar = Pause<br \> F = Freeze
-	<br \> B= Big Particle <br \>V = Voracious Bio<br \>C = Crazy Bio <br \> T = Toggle Gravity Mode</div>
+<div id='helpDisplay' > K = Spawn Many Particles<br \> Space Bar = Pause<br \> F = Freeze
+	<br \> B= Big Particle <br \>V = Voracious Bio<br \>C = Crazy Bio <br \> T = Toggle Gravity Mode <br \> Y = Set Target Gravity<br \> R=Toggle Fear<Br \> </div>
 </body> 
 <html>
